--- a/app/src/main/res/layout/activity_third.xml
+++ b/app/src/main/res/layout/activity_third.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="#5EB7DF"
     android:backgroundTint="#F5F5F6"
-    tools:context=".MainActivity">
+    tools:context=".ThirdActivity">
 
     <LinearLayout
         android:id="@+id/linearLayout2"
