--- a/app/src/main/res/layout/activity_microbitvideo1.xml
+++ b/app/src/main/res/layout/activity_microbitvideo1.xml
@@ -16,14 +16,15 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.481">
+        app:layout_constraintVertical_bias="0.481"
+        tools:ignore="VisualLintBounds">
 
     </com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView>
 
     <LinearLayout
         android:id="@+id/linearLayout12"
-        android:layout_width="417dp"
-        android:layout_height="126dp"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
         android:background="#3572DE"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
@@ -34,18 +35,19 @@
         <TextView
             android:id="@+id/textView15"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="Microbit Video"
+            android:layout_height="60dp"
+            android:fontFamily="sans-serif-black"
+            android:text="@string/microbit_video"
             android:textAlignment="center"
             android:textColor="@color/white"
             android:textColorHint="#F6F3F3"
-            android:textSize="34sp" />
+            android:textSize="34sp"
+            tools:ignore="TextSizeCheck" />
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="394dp"
-        android:layout_height="197dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginTop="203dp"
         android:layout_marginBottom="1dp"
         android:background="#3572DE"
@@ -53,22 +55,56 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/youtubeplayerId">
+        app:layout_constraintTop_toBottomOf="@+id/youtubeplayerId"
+        tools:ignore="VisualLintBounds">
 
-        <EditText
-            android:id="@+id/editTextTextMultiLine9"
+        <RelativeLayout
+            android:id="@+id/tyweekfooter"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:ems="10"
-            android:gravity="start|top"
-            android:inputType="textMultiLine"
-            android:text="Contact us:
-                                     Email:INFO@EST.TECH
-                                     Phone:0906431000
-                                     Website:Ericsson.com"
-            android:textColor="#EFEBEB"
-            android:textSize="24sp" />
+            android:layout_height="wrap_content"
+            android:background="#3572de"
+            tools:ignore="VisualLintBounds">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="80dp"
+                android:layout_marginStart="10dp"
+                android:text="Contact Us"
+                android:textColor="#FFFFFF"
+                android:textSize="20sp"
+                tools:ignore="HardcodedText,VisualLintOverlap" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="45dp"
+                android:layout_marginStart="10dp"
+                android:gravity="bottom"
+                android:text="Email: infuse@ericsson.com"
+                android:textColor="#FFFFFF"
+                android:textSize="15sp"
+                tools:ignore="HardcodedText,VisualLintOverlap" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="60dp"
+                android:layout_marginStart="10dp"
+                android:gravity="bottom"
+                android:text="Phone: (086) 234 5678"
+                android:textColor="#FFFFFF"
+                android:textSize="15sp"
+                tools:ignore="HardcodedText,VisualLintOverlap" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="75dp"
+                android:layout_marginStart="10dp"
+                android:gravity="bottom"
+                android:text="Website: www.ericsson.com"
+                android:textColor="#FFFFFF"
+                android:textSize="15sp"
+                tools:ignore="HardcodedText" />
+
+        </RelativeLayout>
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
