--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -6,12 +6,84 @@
     android:layout_height="match_parent"
     tools:context=".SettingsActivity">
 
+    <RelativeLayout
+        android:id="@+id/dataheader"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_alignParentTop="true"
+        android:background="#3572DE"
+        android:gravity="center"
+        tools:ignore="MissingConstraints">
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="5dp"
+        android:fontFamily="sans-serif-black"
+        android:text="TY Week"
+        android:textColor="#FFFFFF"
+        android:textSize="30sp"
+        tools:ignore="HardcodedText,TextContrastCheck" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/datafooter"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:background="#3572de"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:ignore="MissingConstraints">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="80dp"
+            android:layout_marginStart="10dp"
+            android:text="Contact Us"
+            android:textColor="#FFFFFF"
+            android:textSize="20sp"
+            tools:ignore="HardcodedText,VisualLintOverlap" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="45dp"
+            android:layout_marginStart="10dp"
+            android:gravity="bottom"
+            android:text="Email: infuse@ericsson.com"
+            android:textColor="#FFFFFF"
+            android:textSize="15sp"
+            tools:ignore="HardcodedText,VisualLintOverlap" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="60dp"
+            android:layout_marginStart="10dp"
+            android:gravity="bottom"
+            android:text="Phone: (086) 234 5678"
+            android:textColor="#FFFFFF"
+            android:textSize="15sp"
+            tools:ignore="HardcodedText,VisualLintOverlap" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="75dp"
+            android:layout_marginStart="10dp"
+            android:gravity="bottom"
+            android:text="Website: www.ericsson.com"
+            android:textColor="#FFFFFF"
+            android:textSize="15sp"
+            tools:ignore="HardcodedText" />
+
+    </RelativeLayout>
 
     <TextView
         android:id="@+id/textView6"
         android:layout_width="412dp"
         android:layout_height="201dp"
-        android:text="While students are in Ericsson, they will be given a tour of the Ericsson data center. This is where Ericsson store all their hardware, drives and cooling systems. They always keep a reserve of each thing in case one fails they have a backup until the other is fixed."
+        android:text="@string/while_students_are_in_ericsson_they_will_be_given_a_tour_of_the_ericsson_data_center_this_is_where_ericsson_store_all_their_hardware_drives_and_cooling_systems_they_always_keep_a_reserve_of_each_thing_in_case_one_fails_they_have_a_backup_until_the_other_is_fixed"
         android:textAlignment="center"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -19,7 +91,8 @@
         app:layout_constraintHorizontal_bias="0.615"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.207" />
+        app:layout_constraintVertical_bias="0.207"
+        tools:ignore="TextSizeCheck,VisualLintBounds" />
 
     <Button
         android:id="@+id/button"
@@ -27,13 +100,14 @@
         android:layout_height="66dp"
         android:backgroundTint="#3572DE"
         android:onClick="datacenterSettings"
-        android:text="Press here to watch a video of a tour of the Data Center"
+        android:text="@string/press_here_to_watch_a_video_of_a_tour_of_the_data_center"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.777" />
+        app:layout_constraintVertical_bias="0.777"
+        tools:ignore="TextSizeCheck,VisualLintButtonSize" />
 
     <ImageView
         android:id="@+id/imageView"
@@ -45,60 +119,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.6"
-        app:srcCompat="@drawable/img" />
-
-    <LinearLayout
-        android:id="@+id/linearLayout13"
-        android:layout_width="424dp"
-        android:layout_height="131dp"
-        android:background="#3572DE"
-        android:backgroundTint="#3572DE"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.444"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0">
-
-        <EditText
-            android:id="@+id/editTextTextMultiLine7"
-            android:layout_width="437dp"
-            android:layout_height="match_parent"
-            android:layout_marginStart="16dp"
-            android:layout_weight="1"
-            android:ems="10"
-            android:gravity="start|top"
-            android:inputType="textMultiLine"
-            android:text="Contact us:
-                                     Email:INFO@EST.TECH
-                                     Phone:0906431000
-                                     Website:Ericsson.com"
-            android:textColor="#FDFBFB"
-            android:textSize="22sp" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="415dp"
-        android:layout_height="110dp"
-        android:animationCache="true"
-        android:background="#3572DE"
-        android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <TextView
-            android:id="@+id/textView12"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="          Data Centre Tour"
-            android:textColor="#F8F6F6"
-            android:textSize="34sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
-    </LinearLayout>
-
-
+        app:srcCompat="@drawable/img_servers"
+        android:contentDescription="TODO"
+        tools:ignore="ContentDescription,HardcodedText,VisualLintBounds" />
 </androidx.constraintlayout.widget.ConstraintLayout>
