--- a/app/src/main/res/layout/activity_scrumteamsettings.xml
+++ b/app/src/main/res/layout/activity_scrumteamsettings.xml
@@ -22,8 +22,8 @@
 
   <LinearLayout
       android:id="@+id/linearLayout12"
-      android:layout_width="417dp"
-      android:layout_height="126dp"
+      android:layout_width="match_parent"
+      android:layout_height="60dp"
       android:background="#3572DE"
       android:orientation="horizontal"
       app:layout_constraintEnd_toEndOf="parent"
@@ -37,6 +37,7 @@
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:text="Scrum Team Video"
+        android:fontFamily="sans-serif-black"
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textColorHint="#F6F3F3"
@@ -44,31 +45,64 @@
   </LinearLayout>
 
   <LinearLayout
-      android:layout_width="394dp"
-      android:layout_height="197dp"
-      android:layout_marginTop="203dp"
-      android:layout_marginBottom="1dp"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
       android:background="#3572DE"
       android:orientation="horizontal"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.0"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@+id/youtubeplayerId">
+      app:layout_constraintTop_toBottomOf="@+id/youtubeplayerId"
+      app:layout_constraintVertical_bias="1.0">
 
-    <EditText
-        android:id="@+id/editTextTextMultiLine9"
+    <RelativeLayout
+        android:id="@+id/tyweekfooter"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:ems="10"
-        android:gravity="start|top"
-        android:inputType="textMultiLine"
-        android:text="Contact us:
-                                     Email:INFO@EST.TECH
-                                     Phone:0906431000
-                                     Website:Ericsson.com"
-        android:textColor="#EFEBEB"
-        android:textSize="24sp" />
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:background="#3572de">
+
+      <TextView
+          android:layout_width="wrap_content"
+          android:layout_height="80dp"
+          android:layout_marginStart="10dp"
+          android:text="Contact Us"
+          android:textColor="#FFFFFF"
+          android:textSize="20sp"
+          tools:ignore="HardcodedText,VisualLintOverlap" />
+
+      <TextView
+          android:layout_width="wrap_content"
+          android:layout_height="45dp"
+          android:layout_marginStart="10dp"
+          android:gravity="bottom"
+          android:text="Email: infuse@ericsson.com"
+          android:textColor="#FFFFFF"
+          android:textSize="15sp"
+          tools:ignore="HardcodedText,VisualLintOverlap" />
+
+      <TextView
+          android:layout_width="wrap_content"
+          android:layout_height="60dp"
+          android:layout_marginStart="10dp"
+          android:gravity="bottom"
+          android:text="Phone: (086) 234 5678"
+          android:textColor="#FFFFFF"
+          android:textSize="15sp"
+          tools:ignore="HardcodedText,VisualLintOverlap" />
+
+      <TextView
+          android:layout_width="wrap_content"
+          android:layout_height="75dp"
+          android:layout_marginStart="10dp"
+          android:gravity="bottom"
+          android:text="Website: www.ericsson.com"
+          android:textColor="#FFFFFF"
+          android:textSize="15sp"
+          tools:ignore="HardcodedText" />
+
+    </RelativeLayout>
   </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
