--- a/app/src/main/res/layout/activity_settingsdatacentertour.xml
+++ b/app/src/main/res/layout/activity_settingsdatacentertour.xml
@@ -22,10 +22,10 @@
 
     <LinearLayout
         android:id="@+id/linearLayout12"
-        android:layout_width="417dp"
-        android:layout_height="126dp"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
         android:background="#3572DE"
-        android:orientation="horizontal"
+        android:gravity="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -33,18 +33,18 @@
 
         <TextView
             android:id="@+id/textView15"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="          Data Center Tour"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Data Center Tour"
+            android:fontFamily="sans-serif-black"
             android:textColor="@color/white"
             android:textColorHint="#F6F3F3"
             android:textSize="34sp" />
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="394dp"
-        android:layout_height="197dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginTop="203dp"
         android:layout_marginBottom="1dp"
         android:background="#3572DE"
@@ -57,13 +57,10 @@
         <EditText
             android:id="@+id/editTextTextMultiLine9"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:ems="10"
-            android:gravity="start|top"
+            android:layout_height="wrap_content"
             android:inputType="textMultiLine"
             android:text="Contact us:
-                                     Email:INFO@EST.TECH
+                                     Email:infuse@ericsson.com
                                      Phone:0906431000
                                      Website:Ericsson.com"
             android:textColor="#EFEBEB"
