--- a/app/src/main/res/layout/activity_settingsinternetsecurityvideo.xml
+++ b/app/src/main/res/layout/activity_settingsinternetsecurityvideo.xml
@@ -22,8 +22,8 @@
 
     <LinearLayout
         android:id="@+id/linearLayout12"
-        android:layout_width="417dp"
-        android:layout_height="126dp"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
         android:background="#3572DE"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
@@ -35,6 +35,7 @@
             android:id="@+id/textView15"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:fontFamily="sans-serif-black"
             android:layout_weight="1"
             android:text="Internet Security Video"
             android:textAlignment="center"
@@ -44,8 +45,8 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="394dp"
-        android:layout_height="197dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="203dp"
         android:layout_marginBottom="1dp"
         android:background="#3572DE"
@@ -57,11 +58,8 @@
 
         <EditText
             android:id="@+id/editTextTextMultiLine9"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:ems="10"
-            android:gravity="start|top"
             android:inputType="textMultiLine"
             android:text="Contact us:
                                      Email:INFO@EST.TECH
