--- a/app/src/main/res/layout/activity_settingsmicrobit.xml
+++ b/app/src/main/res/layout/activity_settingsmicrobit.xml
@@ -36,20 +36,20 @@
 
         <LinearLayout
             android:id="@+id/linearLayout4"
-            android:layout_width="415dp"
-            android:layout_height="61dp"
-            android:background="#02DAF6"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
             android:orientation="horizontal"
-            tools:layout_editor_absoluteX="-5dp"
-            tools:layout_editor_absoluteY="1dp">
+            tools:layout_editor_absoluteX="20dp"
+            tools:layout_editor_absoluteY="2dp">
 
                 <TextView
                     android:id="@+id/textView7"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:background="#3572DE"
-                    android:text="   Information about Microbit"
+                    android:gravity="center"
+                    android:fontFamily="sans-serif-black"
+                    android:text="Information about Microbit"
                     android:textColor="#F4F1F1"
                     android:textSize="30sp" />
         </LinearLayout>
