--- a/app/src/main/res/layout/activity_settingspythonvideo.xml
+++ b/app/src/main/res/layout/activity_settingspythonvideo.xml
@@ -32,16 +32,17 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="121dp"
+            android:layout_height="60dp"
             android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/textView14"
                 android:layout_width="match_parent"
-                android:layout_height="126dp"
-                android:layout_weight="1"
+                android:layout_height="60dp"
                 android:background="#3572DE"
-                android:text="       Video about Python"
+                android:text="Video about Python"
+                android:gravity="center"
+                android:fontFamily="sans-serif-black"
                 android:textColor="#FBFBFB"
                 android:textSize="34sp"
                 app:layout_constraintEnd_toEndOf="parent"
